# datascience-publicpolicy-2026

./: .gitignore  README.md  pyproject.toml
data/examples/week_10/: democracy_gdp.csv  education.csv
data/final_project/cory-baird/: macro_growth_debt.csv  processed_macro_data.csv
docs/: example_datasets.md
notebooks/hw/: HW1-Russell Tsai.ipynb
notebooks/hw/final_project/: hw_4.ipynb  hw_4_advanced.ipynb  hw_4_example.ipynb
notebooks/hw/hw_2/: hw_2.ipynb
notebooks/hw/hw_3/: hw_3.ipynb
notebooks/week_10/: 1-machine_learning.ipynb  2-ai-loops.ipynb
notebooks/week_9/: 1-spacy-transformers.ipynb  2-ai-llm.ipynb
references/configs/final_project/cory-baird/: project_settings.yaml
references/dictionaries/: iso2_to_countryname.py
references/dictionaries/final_project/cory-baird/: country_mapping.py
references/grading/: hw3_grading.yaml
references/prompts/: commit_specialist.yaml
src/final_project/cory-baird/advanced/: data.py  graph.py  manipulate.py  model.py  pipeline.py
src/final_project/cory-baird/basic/: data.py  graph.py  manipulate.py  model.py  pipeline.py
src/grading/: grader_hw_3.py
